# contemplation

./: LICENSE  README.md  pyproject.toml
.github/workflows/: static.yml  test.yml
docs/contemplation/: execution_introspections.html  index.html  instance_introspections.html  type_introspections.html
docs/contemplation/experimental/: index.html  type_introspections.html
src/contemplation/: __init__.py  execution_introspections.py  instance_introspections.py  introspection_utilities.py  type_introspections.py
src/contemplation/experimental/: __init__.py  type_introspections.py
src/workercontext/: __init__.py
tests/: test_execution.py  test_introspections.py  test_type.py
