[project]
name = "contemplation"
version = "0.0.1"
description = "A small package that provides a number of powerful introspection tools"
readme = "README.md"
authors = [
  { name = "Owen Elliott", email = "none@none.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/OwenPendrighElliott/comtemplation"
"Bug Tracker" = "https://github.com/OwenPendrighElliott/comtemplation/issues"