[project]
name = "contemplation"
version = "0.0.2"
description = "A small package that provides a number of powerful introspection tools"
authors = [{ name = "Owen Elliott", email = "none@none.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = []
optional-dependencies = {}

[project.urls]
Homepage = "https://github.com/OwenPendrighElliott/contemplation"
"Bug Tracker" = "https://github.com/OwenPendrighElliott/contemplation/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

